# django-launchbox

./: .editorconfig  .flake8  .gitignore  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: index.en.md  index.ja.md  release-notes.en.md  release-notes.ja.md
docs/css/: extra.css
launchbox/: apps.py
launchbox/content/: apps.py
launchbox/content/locale/ja/LC_MESSAGES/: django.po
launchbox/content/migrations/: 0001_initial.py  0002_page_description_alter_pagefollow_deleted_at_and_more.py  0002_remove_pagefollow_page_remove_pagefollow_user_and_more.py  0003_contenttheme.py  0003_page_labels_alter_pagelabeling_label_and_more.py  0004_content_theme_content_title.py  0004_pagemetaitem_key_alter_page_slug.py
launchbox/content/models/: __init__.py  application.py  content.py  mediafile.py  page.py  service.py  utils.py
launchbox/core/: README.md  apps.py
launchbox/core/aws/: apps.py
launchbox/core/aws/backends/: storage.py
launchbox/core/backends/: pagination.py
launchbox/core/jsonwebtoken/: apps.py  models.py  settings.py  utils.py
launchbox/core/jsonwebtoken/locale/ja/LC_MESSAGES/: django.po
launchbox/core/locale/ja/LC_MESSAGES/: django.po
launchbox/core/models/: __init__.py  mixins.py
launchbox/core/onetimecode/: apps.py  models.py  settings.py  utils.py
launchbox/core/onetimecode/locale/ja/LC_MESSAGES/: django.po
launchbox/core/phonenumber/: apps.py  forms.py  settings.py  utils.py  validators.py
launchbox/core/phonenumber/api/: __init__.py  serializers.py
launchbox/core/phonenumber/locale/ja/LC_MESSAGES/: django.po
launchbox/core/phonenumber/models/: __init__.py  fields.py
sample/: manage.py
sample/sample/: settings.py
