[tool.poetry]
name = "launchbox"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
license = "BSD-3-Clause"
homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = []
packages = []
include = []
exclude = []

[tool.poetry.dependencies]
python = ">=3.8.1"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.1.19"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
tox = "^4.6.4"
mkdocs-static-i18n = "^0.56"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
