[tool.poetry]
name = "launchbox"
version = "0.0.0"
description = "Django LaunchBox is a tool box provides powerful utilities for backend development."
authors = ["LaunchAt Development Team <develop@launchat.jp>"]
maintainers = ["LaunchAt Development Team <develop@launchat.jp>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://launchat.github.io/django-launchbox"
repository = "https://github.com/LaunchAt/django-launchbox"
documentation = "https://launchat.github.io/django-launchbox"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "launchbox" }]
include = []
exclude = []

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = ">=3.2"
phonenumbers = "^8.13.21"
pyotp = "^2.9.0"
pyjwt = "^2.8.0"
watchtower = "^3.0.1"
boto3 = "^1.28.58"
django-storages = "^1.14.1"
beautifulsoup4 = "^4.12.2"
django-codemirror2 = "^0.2"
django-tinymce = "^3.6.1"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
tox = "^4.11.3"
mkdocs-static-i18n = "^1.0.6"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
extend-exclude = "^.*/migrations/*$"

[tool.isort]
extend_skip_glob = ["*/migrations/*"]
skip_gitignore = true
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true
exclude = ["^.*/migrations/*$"]
